		Students: changed School Attendance sub page to Attendance to improve UI consistency
		Students: adjusted logic in student enrolment visualisation to include students who are not 'Full'
		School Admin: updated Finance Settings email to default to organisation email if blank
		School Admin: extend length of name field in Manage Houses to 30 chars
		System Admin: fixed bug causing theme names with spaces to break the theme installer
		System Admin: fixed spelling error in Department settings
		System Admin: fixed typo in Third Party Settings
		Timetable: added This Week link to timetable date navigation in Timetable by Person
		Timetable: added highlight to the current day column in Timetable by Person and Facility
		Timetable: fixed error is specification of gibbonTT database table
		User Admin: fixed Child's Name list in Edit Family to include all students
		User Admin: fixed bug preventing some family links from showing up in Manage Users
		User Admin: removed Back link from child and adult delete modals in Manage Families
		User Admin: tweaked user CLI to better handle parents in multiple families
		User Admin: added staff import feature
        User Admin: added an alphanumeric requirement for usernames in Add User
		User Admin: added fix to prevent the logged in user from deleting themselves.
		User Admin: fixed typo in description for Day-Type Text setting
		User Admin: fixed gibbonPersonID int length in gibbonFamilyAdult and gibbonFamilyChild

v15.0.00
--------
	Headlines
		Code base refactoring of all interface forms
		Timetable Admin: added ability to map classes to Roll Group, sync enrolments, and auto-enrol new students
		Activated Brazilian Portuguese as complete languages

	Changes With Important Notices
		Planner: integrated Resources into the Planner module (/modules/Resources needs to be manually removed)

    Security
		System: fixed security vulnerability in the installer