@@ -78,6 +78,10 @@ if (isActionAccessible($guid, $connection2, '/modules/School Admin/yearGroup_man
                     ->isRequired()
                     ->maxLength(3)
                     ->setValue($values['sequenceNumber']);
+            
+            $row = $form->addRow();
+                $row->addLabel('gibbonPersonIDHOY', __('Head of Year'));
+                $row->addSelectStaff('gibbonPersonIDHOY')->placeholder()->selected($values['gibbonPersonIDHOY']);
 
             $row = $form->addRow();
                 $row->addFooter();
